# python-example

./: docker-compose.yml  pyproject.toml
alembic-migration/: README.md  alembic.ini  alembic_old.ini  pyproject.toml
alembic-migration/migration/: env.py  script.py.mako
alembic-migration/migration/versions/: 001_create_product_table.sql  4c67280926d5_mensagem_2.py  58ede61e6760_mensagem.py  bd42fcf1aa61_mensagem.py  e51fd87cac46_test.py
alembic-migration/src/: product.py
version-control/project/: connection.py  controller.py  main.py  model.py  usecase.py
