[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["adroaldoneto <adroaldoacneto@gmail.com>"]
readme = "README.md"
packages = [{include = "python_example"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
