[tool.poetry]
name = "alembic-migration"
version = "0.1.0"
description = ""
authors = ["adroaldoneto <adroaldoacneto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.2"
fastapi = "^0.89.1"
sqlalchemy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
